Optimize and fix Modal and Keyboard spacing

--- a/src/components/AKeyboard/AKeyboard.scss
+++ b/src/components/AKeyboard/AKeyboard.scss
@@ -1,5 +1,5 @@
 #AKeyboard {
-    margin: 0 -10px;
+    margin: 0 -8px;
     .KeysRow {
         display: flex;
         gap: 1px;
