--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -127,7 +127,7 @@ $selectionBgColorDark: rgb(38, 93, 138);
     .PopupBody {
         overflow-y: auto;
         overflow-x: hidden;
-        padding: 10px;
+        padding: 8px;
         .ButtonsBar {
             margin: 10px 0;
         }
